<resources>
    <string name="app_name">EggWatch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Custom strings below -->

    <string name="s_eggintro">Egg Intro</string>

    <string name="s_entereggwatch">Velkommen til Æggeuret</string>
    <string name="s_entereggwatch_buttontext">Start</string>

    <string name="s_eggChoice">Vælg Æg</string>
    <string name="s_soft">Blødkogt</string>
    <string name="s_smiling">Smilende</string>
    <string name="s_hardboiled">Hårdkogt</string>

    <string name="s_eggtimertext">Timer mm:ss</string>
    <string name="s_eggtimer">00:00</string>
    <string name="s_GO">GO</string>
</resources>
